package unidad4.interfaces;

/**
 *
 * @author Kenny
 */
public interface EstructuraDinamica {

    void agregar(Object object);

    int longitud();

    boolean vacia();

}
