
package unidad4.interfaces;

/**
 *
 * @author Kenny
 */
public interface ListaCircular extends Lista{
    
    
}
