package unidad4.interfaces;

/**
 *
 * @author Kenny
 */
public interface ListaDoblementeEnlazada extends Lista {

    void recorrerOrdenInverso();
}
