
package unidad4.interfaces;

/**
 *
 * @author Kenny
 */
public interface Pila extends EstructuraDinamica{
    
    Object obtener();
    
}
